--- a/estilos/style.css
+++ b/estilos/style.css
@@ -37,6 +37,9 @@ section#login{
     transform: translate(-50%, -50%);
     overflow: hidden;/*tudo que estiver fora borda ficará escondido.*/
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;/*desacelera a animação*/
+    
 }
 
 section#login > div#imagem{
