--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -15,12 +15,14 @@
         float: left;
         width: 30%;
         height: 100%;
+        margin-right: 10px;
     }
 
     section#login > div#formulaio{
         float: right;
         width: 70%;
     }
+   
 }
 
 @media screen and (min-width: 992px) {
@@ -34,13 +36,21 @@
     }
 
     section#login > div#imagem{
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     section#login > div#formulaio{
-        float: right;
+        float: left;
         width: 50%;
+    }
+
+    div#formulario > h1{
+        font-size: 2em;
+    }
+
+    div#formulario > p {
+        font-size: 1.2em;
     }
 }
