--- a/estilos/style.css
+++ b/estilos/style.css
@@ -23,11 +23,12 @@ main{
     position: relative;
     height: 100vh;
     width: 100vw;
+    
 }
 
 section#login{
     background-color: white;
-    width: 250px;
+    width: 258px;
     height: 500px;
     border-radius: 20px;
     
@@ -39,7 +40,7 @@ section#login{
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
     transition: width .3s, height .3s;
     transition-timing-function: ease;/*desacelera a animação*/
-    
+
 }
 
 section#login > div#imagem{
@@ -50,7 +51,17 @@ section#login > div#imagem{
     display: block;
 }
 
+
 section#login > div#formulario{
     display: block;
     padding: 10px;
+}
+
+div#formulario > h1{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario > p{
+    font-size: 0.8em;
 }
