--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -9,20 +9,23 @@
 
     section#login{
         width: 80vw;
+        height: 280px;
+
     }
 
     section#login > div#imagem{
         float: left;
         width: 30%;
         height: 100%;
-        margin-right: 10px;
+        
     }
 
     section#login > div#formulaio{
         float: right;
         width: 70%;
+        
     }
-   
+    
 }
 
 @media screen and (min-width: 992px) {
@@ -32,7 +35,8 @@
     }
 
     section#login{
-        width: 990px;
+        width: 950px;
+        height: 350px;
     }
 
     section#login > div#imagem{
@@ -52,5 +56,8 @@
 
     div#formulario > p {
         font-size: 1.2em;
+        margin: 20px 0px;
     }
+
+    
 }
