--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -20,7 +20,7 @@
         
     }
 
-    section#login > div#formulaio{
+    section#login > div#formulario{
         float: right;
         width: 70%;
         
