--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -45,7 +45,7 @@
         height: 100%;
     }
 
-    section#login > div#formulaio{
+    section#login > div#formulario{
         float: left;
         width: 50%;
     }
